// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead one and four - small 1`] = `
Array [
  <Text>
    lead
  </Text>,
  <View>
    <Text>
      support-1
    </Text>
    <View />
    <Text>
      support-2
    </Text>
    <View />
    <Text>
      support-3
    </Text>
    <View />
    <Text>
      support-4
    </Text>
  </View>,
]
`;

exports[`2. lead one and four - medium 1`] = `
<View>
  <View>
    <Text>
      lead
    </Text>
  </View>
  <View />
  <View>
    <Text>
      support-1
    </Text>
    <View />
    <Text>
      support-2
    </Text>
    <View />
    <Text>
      support-3
    </Text>
    <View />
    <Text>
      support-4
    </Text>
  </View>
</View>
`;
